3.6.0

SPELL REWORK!
* spells and synergies now have levels
* synergies now cost mana
* removed some spells as i consider them bad (like geyser) and others because their spell school doesn't have enough spells, they'll probably be re-added later
* added some new spells
* spell damage stats are now percents and increase spell damage by percent, instead of adding to the damage.
* infusion reworked
* added cooldown reduction, mana cost reduction and cast rate stats (they might not be used yet though, but they're there)
* added +1 to spell school levels stat
* removed elemental conversion and transfer stats, mostly useless after spell damage became a percent
* huge easy aoe spells now have much larger cooldown, added other semi aoe spells that are harder to hit and can't hit that many enemies at once.
* renamed spell schools to masteries. 

What should happen with the rework:
* players should think more about how many points they want to spend and where
* players should decide between base stats or spell levels
* players should be able to play 2 schools of magic that use different elements without feeling useless
* magic should be less op at endgame and more useful at early game.
* aoe clearing a bunch of mobs should be much harder to do, especially from range, as high aoe spells are under long cooldown

If the system didn't make some of these happen, do say.

Other:
* bosses now spawn less minions but they're all max rarity
* blocking fully now stops attack knockbacks. can't figure out how to stop the attack sounds though
* made vanilla teams usable for exp and friendly fire off.
* casting spells now slows you down
* server performance improvements (syncing mob stat packets to client should lag server less now as i almost cut down the packet size in half)
* added all the buildathon rewards that people asked for (still many didn't come claim them though)
* fixed unique cangetset field not doing anything in datapacks