@@ -130,6 +130,11 @@ ae156921a1d3b6daec828d365fa36bfc377e6cf2 assets\mmorpg\models\item\runes\xah\0.j
 5ec50a5b3b28799114eac8e23c779d76af4d7ea7 assets\mmorpg\models\item\runes\xah\2.json
 cd4f20e0898ca2db40613a74533b9c0fc01c4271 assets\mmorpg\models\item\runes\xah\3.json
 2d02b12f2772c3a5c25fd30eb2942b4a815c17a3 assets\mmorpg\models\item\runes\xah\4.json
+cdcfcb587ad8c1d8c6681bbf64f12f3ac6e11011 assets\mmorpg\models\item\runes\yon\0.json
+f0d8a832278b2f78e48551a4105b47b5df909604 assets\mmorpg\models\item\runes\yon\1.json
+c8256b94052619a1e27f483277ee96835a609f8d assets\mmorpg\models\item\runes\yon\2.json
+f4e1c9850e7081f168966cb8652f3ea9fc5c021f assets\mmorpg\models\item\runes\yon\3.json
+4dc60bc99dfd9a1035a4e9fc2a530e0d95f94ea9 assets\mmorpg\models\item\runes\yon\4.json
 90def8024c20483a7261801bdc6899e9203bd6f9 assets\mmorpg\models\item\staff\staff0.json
 f286ededed3f28f9754f853de334ac1e75591662 assets\mmorpg\models\item\staff\staff1.json
 0dc11ff52c7f57a070060e6c5c023785b110a2af assets\mmorpg\models\item\staff\staff2.json
@@ -674,20 +679,21 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-da7c01460797c3db22c9ec52858d100fc5528d93 data\mmorpg\runes\ano.json
+ed67273aeea63401e77ae2855ddbec1b824c89ff data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-2e50f3f30cb1732b1440fb82a40154b0a267a022 data\mmorpg\runes\cen.json
-cb766197aafb9e22b11bfe832d0c02d69ff3e2c1 data\mmorpg\runes\dos.json
-2e32c54029b93945f7d3804286105aee5390a8d0 data\mmorpg\runes\goh.json
-be74324583ee9249b8beb827bd23dbf17dc8b912 data\mmorpg\runes\ita.json
-c381b116764dc67bebf3c5cc8e1563a83e7e7cd8 data\mmorpg\runes\mos.json
+a77fb74fb9c0c58a3d79b739028464f061b1eb42 data\mmorpg\runes\cen.json
+ed956ed031a4d13bb1b896cf9a57c0797353f26e data\mmorpg\runes\dos.json
+567d6cdc9990a866b5499341268d129f0ce2926d data\mmorpg\runes\goh.json
+063ec949ec556f794c127654f911ac6a2914cdb7 data\mmorpg\runes\ita.json
+81e63019e6a2ad0a3b25966625329133b4972040 data\mmorpg\runes\mos.json
 cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-985e0293ba8a694ae43f8f30d45cfa4b6a4f63de data\mmorpg\runes\qar.json
-adbc54355bcca2dc71fcb8b250b1214b66bbaa61 data\mmorpg\runes\rah.json
-59a2caabf8713d2fa7a5c283bae39cd26f380e62 data\mmorpg\runes\voh.json
-032beb0700a6223eb47abbee8955883fc2e7ab09 data\mmorpg\runes\wor.json
-cf9526eedd603f48065d00793cb2c71833aa0a1d data\mmorpg\runes\xah.json
+a23e854d8fd16042b80c656fd101b43e95b7377d data\mmorpg\runes\qar.json
+37e70515a1422d6d044655adba19f3d684fb33ff data\mmorpg\runes\rah.json
+099925fed9ee37a9bd7f9be9be6576dc763bc54a data\mmorpg\runes\voh.json
+c76a36bce7c94d17cd1a57ba3c048145bff8da90 data\mmorpg\runes\wor.json
+e1ff97a5d031e50e47009eddd71edac7239a1ae0 data\mmorpg\runes\xah.json
+4833e914ed9255cb1c7c970274633b5107d3e1e7 data\mmorpg\runes\yon.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
